--- a/app/src/main/res/layout/hello_form.xml
+++ b/app/src/main/res/layout/hello_form.xml
@@ -4,7 +4,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:text="Nama Mahasiswa"/>
+        android:text="Nama Mahasiswaaaaaaaa"/>
 
         <EditText
             android:id="@+id/nameedittext"
